Lab8/Lab8.1.1/.metadata/.plugins/org.eclipse.cdt.ui/Lab8.1.1.build.log
15:12:31 **** Incremental Build of configuration Debug for project Lab8.1.1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:97:3: warning: implicit declaration of function 'LL_TIM_WriteReg' [-Wimplicit-function-declaration]
   97 |   LL_TIM_WriteReg(TIM3, CR1, (LL_TIM_ReadReg(TIM3, CR1) | 0x01)); // Enable TIM3 by setting the CEN (counter enable) bit in CR1 register
      |   ^~~~~~~~~~~~~~~
../Core/Src/main.c:97:25: error: 'CR1' undeclared (first use in this function); did you mean 'CRC'?
   97 |   LL_TIM_WriteReg(TIM3, CR1, (LL_TIM_ReadReg(TIM3, CR1) | 0x01)); // Enable TIM3 by setting the CEN (counter enable) bit in CR1 register
      |                         ^~~
      |                         CRC
../Core/Src/main.c:97:25: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:97:31: warning: implicit declaration of function 'LL_TIM_ReadReg' [-Wimplicit-function-declaration]
   97 |   LL_TIM_WriteReg(TIM3, CR1, (LL_TIM_ReadReg(TIM3, CR1) | 0x01)); // Enable TIM3 by setting the CEN (counter enable) bit in CR1 register
      |                               ^~~~~~~~~~~~~~
../Core/Src/main.c:99:25: error: 'SR' undeclared (first use in this function)
   99 |   LL_TIM_WriteReg(TIM3, SR, 0x0000); // Clear the status register (SR) to reset any pending flags
      |                         ^~
../Core/Src/main.c:101:25: error: 'CNT' undeclared (first use in this function)
  101 |   LL_TIM_WriteReg(TIM3, CNT, 0x0000); // Reset the timer counter value to 0
      |                         ^~~
../Core/Src/main.c:113:11: warning: implicit declaration of function 'LL_GPIO_WriteReg'; did you mean 'HAL_GPIO_WritePin'? [-Wimplicit-function-declaration]
  113 |           LL_GPIO_WriteReg(GPIOA, ODR, (LL_GPIO_ReadReg(GPIOA, ODR) ^ 0x0400));
      |           ^~~~~~~~~~~~~~~~
      |           HAL_GPIO_WritePin
../Core/Src/main.c:113:35: error: 'ODR' undeclared (first use in this function)
  113 |           LL_GPIO_WriteReg(GPIOA, ODR, (LL_GPIO_ReadReg(GPIOA, ODR) ^ 0x0400));
      |                                   ^~~
../Core/Src/main.c:113:41: warning: implicit declaration of function 'LL_GPIO_ReadReg'; did you mean 'HAL_GPIO_ReadPin'? [-Wimplicit-function-declaration]
  113 |           LL_GPIO_WriteReg(GPIOA, ODR, (LL_GPIO_ReadReg(GPIOA, ODR) ^ 0x0400));
      |                                         ^~~~~~~~~~~~~~~
      |                                         HAL_GPIO_ReadPin
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

15:12:33 Build Failed. 5 errors, 4 warnings. (took 2s.102ms)

